--- a/IntelliJ/Student_Tuition/src/sample.fxml
+++ b/IntelliJ/Student_Tuition/src/sample.fxml
@@ -8,7 +8,7 @@
 
 <!-- Create a VBox Container that will hold my three sections of info. -->
 
-<VBox id="MainBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="MainBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <opaqueInsets>
         <Insets left="100.0" />
     </opaqueInsets>
@@ -39,7 +39,7 @@
                 <Insets left="100.0" />
             </padding>
         </Label>
-        <TextField id="FirstNameText" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <TextField id="FirstNameText" GridPane.columnIndex="0" GridPane.rowIndex="0" fx:id="FirstNameText">
             <GridPane.margin>
                 <Insets left="200.0" right="50.0" />
             </GridPane.margin>
@@ -212,7 +212,7 @@
             </rowConstraints>
 
             <!-- Add Button -->
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="138.0" text="Add" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <Button id="AddButton" mnemonicParsing="false"  prefHeight="32.0" prefWidth="138.0" text="Add" GridPane.columnIndex="0" GridPane.rowIndex="0" onAction="#getText">
             <font>
                <Font size="16.0" />
             </font>
@@ -221,7 +221,7 @@
             </GridPane.margin></Button>
 
             <!-- Remove Button -->
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="138.0" text="Remove" GridPane.columnIndex="0" GridPane.rowIndex="1">
+            <Button id="RemoveButton" mnemonicParsing="false" prefHeight="32.0" prefWidth="138.0" text="Remove" GridPane.columnIndex="0" GridPane.rowIndex="1">
                 <font>
                     <Font size="16.0" />
                 </font>
@@ -230,7 +230,7 @@
                 </GridPane.margin></Button>
 
             <!-- Print Button -->
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="138.0" text="Print" GridPane.columnIndex="0" GridPane.rowIndex="2">
+            <Button id="PrintButton" mnemonicParsing="false" prefHeight="32.0" prefWidth="138.0" text="Print" GridPane.columnIndex="0" GridPane.rowIndex="2">
                 <font>
                     <Font size="16.0" />
                 </font>
@@ -245,7 +245,7 @@
     <Separator id="BottomSeperator" layoutX="10.0" layoutY="137.0" prefHeight="16.0" prefWidth="700.0" />
 
     <!-- Text area where any output and error messages go to the user from the program. -->
-   <TextArea id="TextOutput" editable="false" minHeight="200.0" minWidth="650.0" prefHeight="500.0" prefWidth="650.0" style="-fx-background-color: grey;">
+   <TextArea id="TextOutput" editable="false" minHeight="200.0" minWidth="650.0" prefHeight="500.0" prefWidth="650.0" style="-fx-background-color: grey;" fx:id="TextOutput">
       <VBox.margin>
          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
       </VBox.margin>
